Fix mobile not working with position:fixed and overflow-y:hidden

--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,10 @@ a {
 .hidden {
   display: none;
 }
+
+@media screen and (max-width: 650px){
+  html{
+    overflow-y: hidden;
+    position: absolute;
+  }
+}
