--- a/src/components/Category/category.css
+++ b/src/components/Category/category.css
@@ -35,3 +35,9 @@
 .category h3 {
     margin: 0;
 }
+
+@media screen and (max-width: 650px){
+    .category {
+        max-height: 75vh;
+    }
+  }
